--- a/Insurance Premium Prediction .ipynb
+++ b/Insurance Premium Prediction .ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"C:/Users/Nehal/OneDrive/Desktop/Untitled Folder/Class Project/insurance.csv\")"
+    "df = pd.read_csv(\"insurance.csv\")"
    ]
   },
   {
